deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideaboard-deployment
  namespace: ideaboard
  labels:
    app.kubernetes.io/name: ideaboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ideaboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ideaboard
    spec:
      containers:
      - name: go-ideaboard
        image: ghcr.io/unseenwizzard/go-ideaboard:0.1.3-arm64
        command: ["/app/go-ideaboard"]
        args: ["-basepath", "/ideas/"]
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.25"
            memory: "256Mi"
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
